# llama-aws-lambda-slack-chatbot

./: .env.sample  .gitignore  README.md  cdk.json  package-lock.json  package.json
chatbot/: .gitignore  Dockerfile  app.py  chat.py  pyproject.toml
lib/: llama-aws-lambda-slack-chatbot-stack.ts
prompts/: alpaca.txt  chat.txt  vicuna.txt
test/: llama-aws-lambda-slack-chatbot.test.ts
