[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Seikichi KONDO <seikichi@kmc.gr.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.16.4"
python-lambda = "^11.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
